fix: display not full content of app when UI-elements is overflow by vertical axis

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,6 +1,5 @@
 #root,
-.App,
-.page {
+.App {
     height: 100%;
 }
 
@@ -11,7 +10,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     overflow-y: scroll;
-    min-height: 700px;
+    min-height: 100vh;
 
     position: relative;
 
@@ -34,6 +33,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    min-height: 100vh;
     padding: 28px;
     max-width: 392px;
     margin: 0 auto;
